# replit-credit-pilot

./: .env.example  .git-push-lock  .gitignore  .products_cache.pkl  .replit  2025_BANK_RESEARCH_SUMMARY.md  API_REFERENCE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECT_CONSTRAINTS.md  ATTACHED_ASSETS_MIGRATION_PLAN.md  BANK_STANDARDS_COMPARISON.md  BILINGUAL_SYSTEM_IMPLEMENTATION_REPORT.md  COMPLETE_SECURITY_FIX_REPORT.md  CREDITPILOT_COMPLETE_FEATURE_LIST.md  CREDITPILOT_企业文档_中文版.md  CREDITPILOT_会计与审计系统手册.md  CREDITPILOT_功能清单_中文总览.md  CREDITPILOT_技术配置详细文档.md  CREDITPILOT_操作流程详细指南.md  CREDITPILOT_文件存储规范.md  CREDITPILOT_文档总索引.md  CREDITPILOT_系统功能完整手册.md  CREDIT_CARD_CLASSIFICATION_RULES.md  CREDIT_CARD_OPTIMIZATION_SYSTEM_DESIGN.md  DAILY_CHECKLIST.md  DELIVERY_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DESIGN_SYSTEM_UPDATE.md  DETAILED_LOAN_FIELDS_GUIDE.md  DETAILED_PAGE_SPECIFICATIONS.md  DOCUMENTATION_INDEX.md  DOWNLOAD_INSTRUCTIONS.txt  EVIDENCE_ARCHIVE_TEST_GUIDE.md  FEATURE_TESTING_REPORT.md  FILE_MANAGEMENT_RULES.md  FINAL_UNIFIED_DESIGN_V3.md  FULLSCREEN_ALL_PAGES_DEPLOYED.md  FULLSCREEN_LAYOUT_V4.md  GOOGLE_AI_SETUP_GUIDE.md  (+245 more)
DEPRECATED/: README.md
accounting_app/: .env.example  README.md  __init__.py  alerts.py  audit.py  backup.py  config_versioning.py  data_integrity.py  db.py  exception_center.py  file_index.py  init_db.sql  init_tables.py  main.py  models.py  posting_engine.py  rbac.py  report_versioning.py  schemas.py  seed_export_templates.sql  seed_posting_rules.sql
accounting_files/: ACCOUNTING_SYSTEM_DOCUMENTATION.md  (+1 more)
advisory/: bnm_api.py  (+6 more)
(+1545 files in other folders)
