[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "pillow>=11.3.0",
    "plotly>=6.3.1",
    "pytesseract>=0.3.13",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "werkzeug>=3.1.3",
]
